[package]
name = "inverter"
version = "0.1.0"
authors = ["Lluís <lluiscab@gmail.com>"]
edition = "2018"

[dependencies]
crc-any = "2.3.4"
libc = "0.2.72"
tokio = { version = "0.2.21", features = ["full"] }
masterpower-api = { path = "../masterpower-api" }
bytes = "0.5.6"
pretty_env_logger = "0.4.0"

[dev-dependencies]
futures = "0.3.5"
futures_ringbuf = { version = "0.2.1", features = ["tokio"] }
